--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,7 +3,7 @@ host_key_checking = False
 nocows=1
 inventory = ./inventory
 interpreter_python = auto_silent
-forks=2
+#forks=5
 log_path=./ansible.log
 
 
