--- a/ansible/roles/docker_install/tasks/main.yml
+++ b/ansible/roles/docker_install/tasks/main.yml
@@ -1,5 +1,5 @@
 ---
-- name: Install on Docker on CentOS
+- name: Install Docker
   block:
     - name: Install packages to allow apt to use a repository over HTTPS
       apt:
@@ -40,6 +40,7 @@
     - docker-ce-cli
     - docker-compose
     - containerd.io
+  notify: Docker restart
 
 - name: Add user to docker group
   user:
@@ -49,3 +50,11 @@
 - name: Docker SDK for Python
   pip:
     name: docker
+
+- name: Prevent docker from being upgraded
+  dpkg_selections:
+    name: docker-ce
+    selection: hold
+  when:
+    - docker_install_hold is defined 
+    - docker_install_hold == true
