--- a/ansible/roles/linux_os_update/tasks/main.yml
+++ b/ansible/roles/linux_os_update/tasks/main.yml
@@ -2,4 +2,6 @@
 - name: Install docker
   include: "{{ item }}"
   with_first_found:
-    - "{{ ansible_distribution }}.yml"
+    - files:
+      - "{{ ansible_distribution }}.yml"
+      skip: true
