--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -28,9 +28,9 @@ Vagrant.configure("2") do |config|
     n.vm.network "private_network", ip: "192.168.11.101"
     n.vm.hostname = "node1"
     n.vm.provision "shell", inline: $script
-    n.vm.provider "virtualbox" do |pvm|
-      pvm.memory = 2048
-      pvm.cpus = 2
+    n.vm.provider "virtualbox" do |vb|
+          vb.customize ["modifyvm", :id, "--memory", "2048"]
+          vb.customize ["modifyvm", :id, "--cpus", "2"]
     end
   end
   config.vm.define "node2" do |n|
@@ -38,20 +38,11 @@ Vagrant.configure("2") do |config|
     n.vm.network "private_network", ip: "192.168.11.102"
     n.vm.provision "shell", inline: $script
     n.vm.hostname = "node2"
-    n.vm.provider "virtualbox" do |pvm|
-      pvm.memory = 2048
-      pvm.cpus = 2
-    end
   end
   config.vm.define "node3" do |n|
     n.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.253"
     n.vm.network "private_network", ip: "192.168.11.103"
     n.vm.provision "shell", inline: $script
     n.vm.hostname = "node3"
-    n.vm.provider "virtualbox" do |pvm|
-      pvm.memory = 2048
-      pvm.cpus = 2
-    end
-
   end
 end
