--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -25,32 +25,26 @@ Vagrant.configure("2") do |config|
   config.vm.provider "virtualbox"
   config.vm.define "node1" do |n|
     n.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.251"
-    n.vm.network "private_network", ip: "192.168.11.101"
-    n.vm.hostname = "node1"
+    n.vm.network "private_network", ip: "192.168.11.100"
+    n.vm.hostname = "master"
     n.vm.provision "shell", inline: $script
     n.vm.provider "virtualbox" do |vb|
           vb.customize ["modifyvm", :id, "--memory", "2048"]
           vb.customize ["modifyvm", :id, "--cpus", "2"]
     end
   end
-  config.vm.define "node2" do |n|
-    n.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.252"
-    n.vm.network "private_network", ip: "192.168.11.102"
-    n.vm.provision "shell", inline: $script
-    n.vm.hostname = "node2"
-    n.vm.provider "virtualbox" do |vb|
-      vb.customize ["modifyvm", :id, "--memory", "1024"]
-      vb.customize ["modifyvm", :id, "--cpus", "2"]
-    end
-  end
-  config.vm.define "node3" do |n|
-    n.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.253"
-    n.vm.network "private_network", ip: "192.168.11.103"
-    n.vm.provision "shell", inline: $script
-    n.vm.hostname = "node3"
-    n.vm.provider "virtualbox" do |vb|
-      vb.customize ["modifyvm", :id, "--memory", "1024"]
-      vb.customize ["modifyvm", :id, "--cpus", "2"]
+  (1..4).each do |i|
+    config.vm.define "node-#{i}" do |node|
+        node.vm.box = "ubuntu/bionic64"
+        node.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.#{250 + i}"
+        node.vm.network "private_network", ip: "192.168.11.#{100 + i}"
+        node.vm.hostname = "node-#{i}"
+        node.vm.provision "shell", inline: $script
+        node.vm.provider "virtualbox" do |vb|
+              vb.customize ["modifyvm", :id, "--memory", "1024"]
+              vb.customize ["modifyvm", :id, "--cpus", "2"]
+        end
+        end
     end
   end
 end
