--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -23,27 +23,29 @@ SCRIPT
 Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
   config.vm.provider "virtualbox"
-  config.vm.define "node1" do |n|
-    n.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.251"
-    n.vm.network "private_network", ip: "192.168.11.100"
-    n.vm.hostname = "master"
-    n.vm.provision "shell", inline: $script
-    n.vm.provider "virtualbox" do |vb|
-          vb.customize ["modifyvm", :id, "--memory", "2048"]
-          vb.customize ["modifyvm", :id, "--cpus", "2"]
+  (1..1).each do |i|
+    config.vm.define "master" do |master|
+      master.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.#{10 + i}"
+      master.vm.network "private_network", ip: "192.168.11.#{10 + i}"
+      master.vm.hostname = "master-#{i}"
+      master.vm.provision "shell", inline: $script
+      master.vm.provider "virtualbox" do |vb|
+        vb.customize ["modifyvm", :id, "--memory", "2048"]
+        vb.customize ["modifyvm", :id, "--cpus", "2"]
+      end
     end
   end
   (1..4).each do |i|
-    config.vm.define "node-#{i}" do |node|
-        node.vm.box = "ubuntu/bionic64"
-        node.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.#{250 + i}"
-        node.vm.network "private_network", ip: "192.168.11.#{100 + i}"
-        node.vm.hostname = "node-#{i}"
-        node.vm.provision "shell", inline: $script
-        node.vm.provider "virtualbox" do |vb|
-              vb.customize ["modifyvm", :id, "--memory", "1024"]
-              vb.customize ["modifyvm", :id, "--cpus", "2"]
-        end
+    config.vm.define "node" do |node|
+      node.vm.box = "ubuntu/bionic64"
+      node.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.#{13 + i}"
+      node.vm.network "private_network", ip: "192.168.11.#{13 + i}"
+      node.vm.hostname = "node-#{i}"
+      node.vm.provision "shell", inline: $script        
+      node.vm.provider "virtualbox" do |vb|
+        vb.customize ["modifyvm", :id, "--memory", "1024"]
+        vb.customize ["modifyvm", :id, "--cpus", "2"]
+      end
     end
   end
 end
