--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -24,7 +24,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "ubuntu/bionic64"
   config.vm.provider "virtualbox"
   (1..1).each do |i|
-    config.vm.define "master" do |master|
+    config.vm.define "master-#{i}" do |master|
       master.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.#{10 + i}"
       master.vm.network "private_network", ip: "192.168.11.#{10 + i}"
       master.vm.hostname = "master-#{i}"
@@ -36,7 +36,7 @@ Vagrant.configure("2") do |config|
     end
   end
   (1..4).each do |i|
-    config.vm.define "node" do |node|
+    config.vm.define "node-#{i}" do |node|
       node.vm.box = "ubuntu/bionic64"
       node.vm.network "public_network", bridge: "enp24s0", ip: "192.168.88.#{13 + i}"
       node.vm.network "private_network", ip: "192.168.11.#{13 + i}"
