--- a/ansible/roles/k8s_join_node/tasks/main.yml
+++ b/ansible/roles/k8s_join_node/tasks/main.yml
@@ -1,6 +1,12 @@
 ---
+- name: collect facts about system services
+  service_facts:
+  register: services_state
+  
 - name: Copy the join command to server location
   copy: src=join-command dest=/tmp/join-command.sh mode=0770
+  when: ansible_facts.services['kubelet.service']['state'] != 'running'
 
 - name: Join the node to cluster
   command: sh /tmp/join-command.sh
+  when: ansible_facts.services['kubelet.service']['state'] != 'running'
