--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -29,8 +29,8 @@ Vagrant.configure("2") do |config|
       master.vm.network "private_network", ip: "192.168.11.#{10 + i}"
       master.vm.hostname = "master-#{i}"
       master.vm.provision "shell", inline: $script
-      node.vm.provision "ansible" do |ansible|
-        ansible.playbook = "../ansible/useradd_ansible.yml"
+      master.vm.provision "ansible" do |ansible|
+        ansible.playbook = "../ansible/vagrant_useradd_ansible.yml"
       end
       master.vm.provider "virtualbox" do |vb|
         vb.customize ["modifyvm", :id, "--memory", "2048"]
@@ -46,7 +46,7 @@ Vagrant.configure("2") do |config|
       node.vm.hostname = "node-#{i}"
       node.vm.provision "shell", inline: $script
       node.vm.provision "ansible" do |ansible|
-        ansible.playbook = "../ansible/useradd_ansible.yml"
+        ansible.playbook = "../ansible/vagrant_useradd_ansible.yml"
       end
       node.vm.provider "virtualbox" do |vb|
         vb.customize ["modifyvm", :id, "--memory", "1024"]
