--- a/vagrant/Vagrantfile
+++ b/vagrant/Vagrantfile
@@ -31,6 +31,9 @@ Vagrant.configure("2") do |config|
       master.vm.provision "shell", inline: $script
       master.vm.provision "ansible" do |ansible|
         ansible.playbook = "../ansible/vagrant_useradd_ansible.yml"
+        ansible.extra_vars = {
+          hosts: "all",
+        }
       end
       master.vm.provider "virtualbox" do |vb|
         vb.customize ["modifyvm", :id, "--memory", "2048"]
@@ -47,6 +50,9 @@ Vagrant.configure("2") do |config|
       node.vm.provision "shell", inline: $script
       node.vm.provision "ansible" do |ansible|
         ansible.playbook = "../ansible/vagrant_useradd_ansible.yml"
+        ansible.extra_vars = {
+          hosts: "all",
+        }
       end
       node.vm.provider "virtualbox" do |vb|
         vb.customize ["modifyvm", :id, "--memory", "1024"]
