--- a/ansible/roles/k8s_init/tasks/main.yml
+++ b/ansible/roles/k8s_init/tasks/main.yml
@@ -24,6 +24,6 @@
     msg: "{{ join_command.stdout_lines }}" 
 
 - name: Copy join command to local file
-  local_action: copy content="{{ join_command.stdout_lines[0] }}" dest="./join-command.sh"
+  local_action: copy content="{{ join_command.stdout_lines[0] }}" dest="./join-command"
   become: no
 
