--- a/ansible/roles/k8s_install/tasks/main.yml
+++ b/ansible/roles/k8s_install/tasks/main.yml
@@ -59,3 +59,13 @@
       systemd:
         name: kubelet
         enabled: yes
+
+
+    - name: Copy 10-kubeadm.conf file from jinja2-template
+      template:
+        src: 10-kubeadm.conf.j2
+        dest: /etc/systemd/system/kubelet.service.d/10-kubeadm.conf
+        mode: 0640
+        owner: root
+        group: root
+      notify: Restart kubelet
