--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -3,9 +3,12 @@ host_key_checking = False
 nocows=1
 inventory = ./inventory
 interpreter_python = auto_silent
+# ansible_python_interpreter=python3.9
+ansible_python_interpreter="/usr/bin/env python3"
+
 #forks=5
 log_path=./ansible.log
-
+#ANSIBLE_LIBRARY=${ANSIBLE_LIBRARY}:
 
 [paramiko_connection]
 host_key_auto_add = True
