--- a/ansible/roles/k8s_join_node/tasks/main.yml
+++ b/ansible/roles/k8s_join_node/tasks/main.yml
@@ -4,9 +4,10 @@
 #  register: services_state
   
 - name: Copy the join command to server location
-  copy: src=join-command dest=/tmp/join-command.sh mode=0770
+  copy: src=join-command dest=/tmp/join-command.sh mode=0777
   when: ansible_facts.services['kubelet.service']['state'] != 'running'
 
 - name: Join the node to cluster
-  command: sh /tmp/join-command.sh
+  command: bash -c 'sh /tmp/join-command.sh || ( kubeadm reset --force && rm -rf /etc/cni/net.d && sh /tmp/join-command.sh )'
   when: ansible_facts.services['kubelet.service']['state'] != 'running'
+
