--- a/.gitignore
+++ b/.gitignore
@@ -1,17 +1,13 @@
 *.log
 *.logs
-ansible/*.logs
-ansible/*.log
 ansible/*.retry
-*/.vagrant
 *.vagrant
 *test*
-*/*test*
-.DS_Store
+*.DS_Store
 */.DS_Stores
 *join-command.sh
 *join-command
 *.terraform
-*/*terraform.tfstate
-*/*.backup
-*/.terraform*
+*terraform.tfstate
+*.backup
+*.terraform*
