--- a/ansible/ansible.cfg
+++ b/ansible/ansible.cfg
@@ -4,7 +4,7 @@ nocows=1
 inventory = ./inventory
 interpreter_python = auto_silent
 # ansible_python_interpreter=python3.9
-ansible_python_interpreter="/usr/bin/env python3"
+#ansible_python_interpreter="/usr/bin/env python3"
 
 #forks=5
 log_path=./ansible.log
