--- a/Ansible/ansible_patroni/patroni.yml
+++ b/Ansible/ansible_patroni/patroni.yml
@@ -4,27 +4,26 @@
     - name: Set hostname
       ansible.builtin.hostname:
         name: '{{ inventory_hostname_short }}'
-- hosts: all
-  tasks:
+
     - name: Replace a localhost entry with our own
       lineinfile:
         path: /etc/hosts
         line: "{{ hostvars[item]['ansible_host'] }} {{ hostvars[item]['inventory_hostname'] }} {{ hostvars[item]['inventory_hostname_short'] }}"
-      loop: "{{ groups['patroni-db'] }}"
+      loop: "{{ groups['patroni_db'] }}"
 
-# - hosts: patroni-db
+# - hosts: patroni_db
 #   become: true
 #   tasks:
 #     - name: Gather facts from all hosts implicetely
 #       setup:
 #       with_items:
-#         - "{{ groups['patroni-db'] }}"
+#         - "{{ groups['patroni_db'] }}"
   # run_once: true
   # environment:
   #   http_proxy: http://localhost:443
   #   https_proxy: http://localhost:443
 
-- hosts: patroni-db
+- hosts: patroni_db
   become: true
   roles:
     - patroni_install
